Bug 130502 - [ARM64] Fix assembler build issues and add cacheFlush support for Linux
Summary: [ARM64] Fix assembler build issues and add cacheFlush support for Linux
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Linux
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 108645 130506
  Show dependency treegraph
 
Reported: 2014-03-20 03:43 PDT by Gabor Rapcsanyi
Modified: 2014-03-20 07:04 PDT (History)
5 users (show)

See Also:


Attachments
proposed fix (3.20 KB, patch)
2014-03-20 03:50 PDT, Gabor Rapcsanyi
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Rapcsanyi 2014-03-20 03:43:50 PDT
JavaScript Assembler build issues:

 * error: ‘INT_MIN’ was not declared in this scope

 * error: ‘bool shouldBlindForSpecificArch(uint64_t)’ previously defined here
 static bool shouldBlindForSpecificArch(uint64_t value) { return value >= 0x00ffffff; }

 * #error "The cacheFlush support is missing on this platform."
Comment 1 Gabor Rapcsanyi 2014-03-20 03:50:17 PDT
Created attachment 227280 [details]
proposed fix
Comment 2 Michael Saboff 2014-03-20 06:32:31 PDT
Comment on attachment 227280 [details]
proposed fix

r=me
Comment 3 WebKit Commit Bot 2014-03-20 07:04:15 PDT
Comment on attachment 227280 [details]
proposed fix

Clearing flags on attachment: 227280

Committed r165961: <http://trac.webkit.org/changeset/165961>
Comment 4 WebKit Commit Bot 2014-03-20 07:04:18 PDT
All reviewed patches have been landed.  Closing bug.